--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span></span>
             <span></span>
             <span></span>
-            <img class="content_img" src="./assets/img/pf.jpg"></img>
+            <img class="content_img" src="./assets/img/fotox.jpg"></img>
 
             <h3>@LukerF7</h3>
           </div>
