--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="content">
           <ul>
             <li><i class="fa-brands fa-github"></i><a href="https://github.com/Luk3rF7">Github</a></li>
-            <li><i class="fa-regular fa-address-card"></i><a href="#">Curriculo</a></li>
+            <li><i class="fa-regular fa-address-card"></i><a href="https://luk3rf7.github.io/Cv_resume/">Curriculo</a></li>
             <li><i class="fa-solid fa-list"></i><a href="https://luk3rf7.github.io/Portfolio_Front_Ends/">Portfolio</a></li>
             <li><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/lucas-felipe-a58b34259/">Linkedin</a></li>
           </ul>
